# poetry-split-markers-test

./: README.md  pyproject.toml  run-tests.sh  runpyversion.sh
.github/workflows/: test.yml
