[project]
name = "poetry-split-markers-test"
version = "0.1.0"
description = ""
authors = [
    { name = "Wade", email = "wade@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chardet==5.0.0; python_version == '3.9'",
    "chardet==7.4.3; python_version >= '3.10'",
]

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pytest==8.3.5; python_version == '3.9'",
    "pytest==9.0.3; python_version >= '3.10'",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
